Add new Axes plotting class and RecordedObject class for non-copyable objects
The major limitation of the current replot implementation is that matplotlib
Axes and Figure objects can't be copied by Reinteract, and therefore combine
badly with reinteractive features. RecordedObject solves this by providing a
copyable class that records and replays method calls to obtain an object's
state, and Axes uses these features to provide a more fully-featured extension
for matplotlib.

The RecordedObject class and associated infrastructure is currently only used
by Axes, but is in principle usable for any class that can't be easily copied,
but whose state is built up over a series of calls and then evaluated.

Makefile.am: Install recorded_object.py and plot2.rws
plot2.rws: New example worksheet demonstrating more complex replot usage
recorded_object.py: New RecordedObject class and associated infrastructure
replot.py: Replace PlotResult and ImshowResult with more generic Axes class

http://www.reinteract.org/trac/ticket/54

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,6 +38,7 @@ reinteractpkg_PYTHON =                                                        \
                     lib/reinteract/notebook_window.py                         \
                     lib/reinteract/open_notebook.py                           \
                     lib/reinteract/popup.py                                   \
+                    lib/reinteract/recorded_object.py                         \
                     lib/reinteract/retokenize.py                              \
                     lib/reinteract/rewrite.py                                 \
                     lib/reinteract/sanitize_textview_ipc.py                   \
@@ -68,6 +69,7 @@ examples_DATA =					\
              examples/index.rnb			\
              examples/play.rws			\
              examples/plot.rws			\
+             examples/plot2.rws			\
 	     $(LIST_END)
 
 TOOLS_EXTRA =					\
