Add a version to the about dialog
GlobalSettings: Add a version property
AboutDialog: Use global_settings.version

uninst.py: Use git-describe to get a version when running from the
  uninstalled tree.
Reinteract.pyw build_msi.py: Subsitute version into Reinteract.pyw
  when building the Windows installer
reinteract_wrapper_osx/main.m: Set the version from config.h on the
  global settings object.

Suggestion from Szabolcs Horvát

--- a/bin/reinteract.in
+++ b/bin/reinteract.in
@@ -17,6 +17,7 @@ prefix="@prefix@"
 datarootdir="@datarootdir@".replace("${prefix}", prefix)
 global_settings.dialogs_dir = os.path.join(datarootdir, "reinteract", "dialogs")
 global_settings.examples_dir = os.path.join(datarootdir, "reinteract", "examples")
+global_settings.version = "@VERSION@"
 
 if __name__ == "__main__":
     import reinteract.main
