Simplify about dialog logo handling by installing Reinteract.ico
data/Makefile.am: Install Reinteract.ico in $pkgdatadir
bin/reinteract.in: Use installed Reinteract.ico for icon_file
AboutDialog: Always use Reinteract.ico and never the named icon
src/reinteract_wrapper_osx/main.m Makefile.am: Use Reinteract.ico
  for the 'make install' case.

--- a/Makefile.am
+++ b/Makefile.am
@@ -179,7 +179,8 @@ INCLUDES =					\
 	$(PYTHON_INCLUDES)			\
 	$(WRAPPER_CFLAGS)			\
 	-DEXAMPLESDIR=\"$(examplesdir)\"	\
-	-DDIALOGSDIR=\"$(pkgdatadir)/dialogs\"
+	-DDIALOGSDIR=\"$(pkgdatadir)/dialogs\"	\
+	-DICONDIR=\"$(pkgdatadir)\"
 
 ReinteractWrapper_LDFLAGS = -framework Cocoa $(PYTHON_LIBS)
 
