Add a script to do all the steps of building a bundle
Building the universal binary and the bundle had gotten pretty
cumbersome; build_bundle.sh handles all the steps other than
building the dependencies (you don't usually want to do that)

--- a/Makefile.am
+++ b/Makefile.am
@@ -105,6 +105,7 @@ WIX_EXTRA =					\
 BUNDLE_EXTRA =							\
 	tools/build_bundle/README				\
 	tools/build_bundle/build_bundle.py			\
+	tools/build_bundle/build_bundle.sh			\
 	tools/build_bundle/reinteract-dmg-background.png	\
 	tools/build_bundle/reinteract-dmg-background.svg	\
 	tools/build_bundle/reinteract.dsstore
