Dist Reinteract.ico
Files in somedir_DATA don't automatically get disted; add Reinteract.ico
back to EXTRA_DIST.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -19,6 +19,7 @@ EXTRA_DIST=					\
 	MainMenu.nib/classes.nib		\
 	MainMenu.nib/info.nib			\
 	MainMenu.nib/keyedobjects.nib		\
+	Reinteract.ico				\
 	Reinteract.icns
 
 # Calling update-mime-database is necessary to get the associations
